src/test/deca/context/invalid/created/return/return_double_boolean.deca
// Description :
//    test double return avec boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: 

class a{
boolean met(){
boolean a = true;
return a;return a;}
}
